<resources>
    <string name="app_name">DAS Movies</string>
    <string name="VerCatalogoPeliculas">Ver catálogo de películas</string>
    <string name="VerListasFavoritos">Ver listas de favoritos</string>
    <string name="VerMasTarde">Ver más tarde</string>
    <string name="Catalogo">CATÁLOGO DE PELÍCULAS</string>
    <string name="BuscarPorTitulo">Buscar por título...</string>
    <string name="Buscar">Buscar</string>
    <string name="ComentariosPelicula">COMENTARIOS DE LA PELÍCULA</string>
    <string name="Comentarios">Comentarios:</string>
    <string name="EscribirComentarios">Escribir comentarios...</string>
    <string name="Guardar">Guardar</string>
    <string name="ListaPeliculasFavoritas">LISTA DE PELÍCULAS FAVORITAS</string>
    <string name="NombreUsuario">Nombre de usuario...</string>
    <string name="Contraseña">Contraseña...</string>
    <string name="Entrar">Entrar</string>
    <string name="O">o</string>
    <string name="CrearCuenta">Crear cuenta</string>
    <string name="InformacionPelicula">INFORMACIÓN DE LA PELÍCULA</string>
    <string name="Titulo">Titulo:</string>
    <string name="Puntuacion">Puntuación:</string>
    <string name="Generos">Géneros:</string>
    <string name="Duracion">Duración:</string>
    <string name="FechaLanzamiento">Fecha lanzamiento:</string>
    <string name="IdiomaOriginal">Idioma original:</string>
    <string name="IdiomasDisponibles">Idiomas disponibles:</string>
    <string name="Presupuesto">Presupuesto:</string>
    <string name="Ingresos">Ingresos:</string>
    <string name="Productoras">Productoras:</string>
    <string name="Sinopsis">Sinopsis:</string>
    <string name="AñadirFavoritos">AÑADIR A FAVORITOS</string>
    <string name="VerMasTardeP">VER MÁS TARDE</string>
    <string name="Contraseña2">Contraseña de nuevo...</string>
    <string name="Registrarse">Registrarse</string>
    <string name="ListaVMT">LISTA VER MÁS TARDE</string>
    <string name="IntroducirNombreLista">Introduce el nombre de la nueva lista:</string>
    <string name="EscribirNombre">Escribir nombre...</string>
    <string name="ComentariosBoton">Comentarios</string>
    <string name="Quitar">Quitar</string>
    <string name="FechaProgramada">Fecha programada:</string>
    <string name="Idioma">Idioma:</string>
    <string name="MostrarPreferencias">Mostrar preferencias</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="OcultarPreferencias">Ocultar preferencias</string>
    <string name="IntroducirTitulo">Introduce un título en el buscador.</string>
    <string name="NingunComentario">No hay ningún comentario todavía.</string>
    <string name="ComentarioGuardado">Tu comentario se ha guardado.</string>
    <string name="RellenarCampos">Rellena todos los campos.</string>
    <string name="UserPassIncorrectos">Usuario o contraseña incorrectos.</string>
    <string name="AñadidaVMT">Película añadida a la lista de ver más tarde.</string>
    <string name="PassDiferentes">Las contraseñas introducidas son diferentes.</string>
    <string name="UsuarioRepetido">Ya existe este nombre de usuario.</string>
    <string name="UsuarioRegistrado">Usuario registrado correctamente.</string>
    <string name="AQueListaFav">¿A qué lista de favoritos deseas añadir la película?</string>
    <string name="CrearLista">Crear nueva lista</string>
    <string name="Aceptar">Aceptar</string>
    <string name="PeliculaAnadidaListas">Película añadida a las listas seleccionadas.</string>
    <string name="Cancelar">Cancelar</string>
    <string name="PeliculaNoAnadidaListas">La película no se ha añadido a ninguna lista.</string>
    <string name="CrearNuevaLista">Crear nueva lista de favoritos</string>
    <string name="ListaCreada">Lista creada correctamente.</string>
    <string name="NoCreadoLista">No se ha creado una nueva lista.</string>
    <string name="EliminarPeliculaLista">Eliminar película de la lista</string>
    <string name="SeguroQuitarLista">¿Estas seguro de que quieres eliminar la película de la lista?</string>
    <string name="PeliculaEliminadaLista">Pelicula eliminada de la lista correctamente.</string>
    <string name="Si">Sí</string>
    <string name="No">No</string>
    <string name="NoEliminadoPeliculaLista">No se ha eliminado la película de la lista.</string>
    <string name="PlanificadoPelicula">Habías planificado ver esta película para hoy.</string>
    <string name="BuscarInformacion">Buscar información</string>
    <string name="Accion">Acción</string>
    <string name="Aventura">Aventura</string>
    <string name="Animacion">Animación</string>
    <string name="Comedia">Comedia</string>
    <string name="Crimen">Crimen</string>
    <string name="Documental">Documental</string>
    <string name="Drama">Drama</string>
    <string name="Familia">Familia</string>
    <string name="Fantasia">Fantasía</string>
    <string name="Historia">Historia</string>
    <string name="Terror">Terror</string>
    <string name="Musica">Música</string>
    <string name="Misterio">Misterio</string>
    <string name="Romance">Romance</string>
    <string name="CienciaFiccion">Ciencia Ficción</string>
    <string name="TVPelicula">Película TV</string>
    <string name="Thriller">Thriller</string>
    <string name="Guerra">Guerra</string>
    <string name="Western">Western</string>
    <string name="SinCategorizar">Sin categorizar</string>
    <string name="AlgoNoFunciono">Algo no funcionó. Vuelve a intentarlo.</string>
    <string name="NoHayInformacion">No hay información</string>
    <string name="Espanol">Español</string>
    <string name="Ingles">Inglés</string>
    <string name="Euskera">Euskera</string>
    <string name="Idiomas">Idiomas</string>
    <string name="MostrarOcultarPreferencias">Mostrar/Ocultar Preferencias</string>
    <string name="CerrarSesion">Cerrar sesión</string>
    <string name="PreferenciasUsuario">Preferencias usuario</string>
    <string name="Nombre">Nombre</string>
    <string name="IntroduceNombre">Introduce tu nombre:</string>
    <string name="EligeGenero">Géneros</string>
    <string name="EligeGeneroPref">Elige tu género preferido:</string>
    <string name="CualGeneroPref">¿Cuál es tu género preferido?</string>
    <string name="SeleccionaIdioma">Selecciona el idioma:</string>
    <string name="QueIdioma">¿Qué idioma quieres seleccionar?</string>
    <string name="Favoritos">Favoritos</string>
    <string name="SeleccionarLista">Seleccionar lista:</string>
    <string name="QuitarVMT">Quitar de Ver Más Tarde</string>
    <string name="ComentariosNot">Comentarios</string>
    <string name="ComentarioGuardadoNot">Has guardado un fichero con comentarios.</string>
    <string name="AbrirFichero">Abrir fichero</string>
    <string name="Hola">Hola</string>
</resources>