<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/opcionFav"
        android:icon="@drawable/star"
        android:title="@string/Favoritos"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/opcionVMT"
        android:icon="@drawable/watchlater"
        android:title="@string/VerMasTarde"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/opcionPreferencias"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/MostrarOcultarPreferencias"
        app:showAsAction="never" />

    <item
        android:id="@+id/opcionCerrarSesion"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/CerrarSesion"
        app:showAsAction="never" />

</menu>